--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="utf-8">
     <title>Peer Group Project 1</title>
     <meta name="description" content="Webpage">
-    
-    <link rel="stylesheet" href="">
-    
+
+    <link rel="text/javascript" href="group_01.js">
+
   </head>
-  
-  <body> 
+
+  <body>
 
     <script src="group_01.js"></script>
   </body>
